--- a/public/nhlstandings/index.html
+++ b/public/nhlstandings/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> What Points System Should the NHL be Using? - RationalOilers Blog (RatBlog) </title>
+    <title> What Points System Should the NHL be Using? - OilersRational Blog (RatBlog) </title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="referrer" content="no-referrer">
     <meta name="description" content="" />
-    <meta property="og:site_name" content="RationalOilers Blog (RatBlog)" />
+    <meta property="og:site_name" content="OilersRational Blog (RatBlog)" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://ratblog.netlify.app/nhlstandings/" />
@@ -39,7 +39,7 @@
         href="https://ratblog.netlify.app/images/favicon.png">
 
     
-    <link href="https://ratblog.netlify.app/index.xml" rel="alternate" type="application/rss+xml" title="RationalOilers Blog (RatBlog)" />
+    <link href="https://ratblog.netlify.app/index.xml" rel="alternate" type="application/rss+xml" title="OilersRational Blog (RatBlog)" />
     
 </head>
 
